--- a/contact me/index.html
+++ b/contact me/index.html
@@ -153,28 +153,70 @@
 <footer>
   © 2025 Ismail Abdullahi Idris
 </footer>
+<!-- ======= Firebase Comment Section ======= -->
+<section class="comment-box" style="max-width:600px; margin:auto; color:white;">
+  <h2>Leave a Comment</h2>
+  <form id="commentForm">
+    <input type="text" id="name" placeholder="Your Name" required 
+           style="width:100%; padding:10px; margin:8px 0; border-radius:6px; border:none;">
+    <textarea id="comment" placeholder="Your Comment" required
+              style="width:100%; padding:10px; margin:8px 0; border-radius:6px; border:none;"></textarea>
+    <button type="submit" 
+            style="background:#007bff; color:white; border:none; padding:10px 20px; border-radius:6px; cursor:pointer;">
+      Send Comment
+    </button>
+    <p id="successMsg" style="display:none; color:lightgreen; margin-top:10px;">
+      ✅ Thanks! Your comment has been sent.
+    </p>
+  </form>
+
+  <div id="commentsDisplay" style="margin-top: 30px;">
+    <h3>Recent Comments:</h3>
+    <ul id="commentsList" style="list-style:none; padding:0;"></ul>
+  </div>
+</section>
+
+<!-- ======= Firebase SDKs ======= -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
 <script>
-  // Initialize Firebase
+  // ======= Your Firebase Configuration =======
   const firebaseConfig = {
     apiKey: "AIzaSyCqBs3z1sHmfoqO5-R6IH-epqbp9ypt9GE",
     authDomain: "ismailjalam-a74e4.firebaseapp.com",
-    databaseURL: "https://ismailjalam-a74e4-default-rtdb.firebaseio.com",
     projectId: "ismailjalam-a74e4",
-    storageBucket: "ismailjalam-a74e4.appspot.com",
+    storageBucket: "ismailjalam-a74e4.firebasestorage.app",
     messagingSenderId: "791455932737",
     appId: "1:791455932737:web:452e30144d283124d541c0",
     measurementId: "G-VCP1LJL56G"
   };
 
+  // ======= Initialize Firebase =======
   firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
 
+  // ======= DOM Elements =======
   const commentForm = document.getElementById('commentForm');
   const successMsg = document.getElementById('successMsg');
+  const commentsList = document.getElementById('commentsList');
 
+  // ======= Fetch and Display Comments =======
+  const commentsRef = database.ref('comments');
+  commentsRef.on('child_added', (snapshot) => {
+    const commentData = snapshot.val();
+    const li = document.createElement('li');
+    li.style.padding = "10px";
+    li.style.marginBottom = "10px";
+    li.style.background = "rgba(255,255,255,0.1)";
+    li.style.borderRadius = "8px";
+    li.innerHTML = `<strong>${commentData.name}</strong><br>${commentData.comment}`;
+    commentsList.prepend(li);
+  });
+
+  // ======= Submit Comment =======
   commentForm.addEventListener('submit', (e) => {
     e.preventDefault();
-
     const name = document.getElementById('name').value.trim();
     const comment = document.getElementById('comment').value.trim();
 
@@ -183,7 +225,7 @@
       return;
     }
 
-    const newCommentRef = database.ref('comments').push();
+    const newCommentRef = commentsRef.push();
     newCommentRef.set({
       name: name,
       comment: comment,
@@ -192,17 +234,11 @@
     .then(() => {
       successMsg.style.display = 'block';
       commentForm.reset();
-
-      // Hide the success message after 3 seconds
-      setTimeout(() => {
-        successMsg.style.display = 'none';
-      }, 3000);
+      setTimeout(() => successMsg.style.display = 'none', 3000);
     })
-    .catch((err) => {
-      alert('Error: ' + err.message);
-    });
+    .catch(err => alert('Error: ' + err.message));
   });
 </script>
-
+<!-- ======= End Firebase Comment Section ======= -->
 </body>
 </html>
